--- a/src/index.css
+++ b/src/index.css
@@ -44,7 +44,7 @@
     --sidebar-ring: 217.2 91.2% 59.8%;
   }
 
-  .dark {
+  :root.dark {
     --background: 222.2 84% 4.9%;
     --foreground: 210 40% 98%;
 
